Draft 2 of the talk. Cleaned up slides

--- a/programmering-suger/slides/index.html
+++ b/programmering-suger/slides/index.html
@@ -85,8 +85,27 @@
 
 				<section>
 					<h2>Oppsett</h2>
+				</section>
+
+				<section>
 					<img
 					src="http://blog.codinghorror.com/content/images/uploads/2007/03/6a0120a85dcdae970b0128776ff992970c-pi.png">
+				</section>
+
+				<section>
+					Config
+				</section>
+
+				<section>
+					<img src="http://ljdchost.com/vtaJFMh.jpg" alt="" />
+				</section>
+
+				<section>
+					<p>Could not resolve dependency for ...</p>
+					<<img src="http://ljdchost.com/jNYlqgE.gif" alt="" />
+					<aside class="notes">
+						<p>StackOv. søk: 6,919</p>
+					</aside>
 				</section>
 
 				<section>
@@ -213,6 +232,14 @@ at FailTest.MainClass.Main (System.String[] args)
 
 		<section>
 			<p>Alt for mange måter å deploye på</p>
+		</section>
+
+		<section>
+			<p>RDP</p>
+		</section>
+
+		<section>
+			<img src="img/rdp.png"/>
 		</section>
 
 		<section>
