Chore chore chore

--- a/programmering-suger/slides/index.html
+++ b/programmering-suger/slides/index.html
@@ -102,7 +102,7 @@
 
 				<section>
 					<p>Could not resolve dependency for ...</p>
-					<<img src="http://ljdchost.com/jNYlqgE.gif" alt="" />
+					<img src="http://ljdchost.com/jNYlqgE.gif" alt="" />
 					<aside class="notes">
 						<p>StackOv. søk: 6,919</p>
 					</aside>
@@ -227,6 +227,10 @@ at FailTest.MainClass.Main (System.String[] args)
 		</section>
 
 		<section>
+			<img src="http://i3.kym-cdn.com/photos/images/newsfeed/000/370/110/588.jpg" alt="" />
+		</section>
+
+		<section>
 			<h2>Deploy</h2>
 		</section>
 
@@ -256,34 +260,9 @@ at FailTest.MainClass.Main (System.String[] args)
 		</section>
 
 
-			<section>
-				<h3>Reproducing and tracing bugs</h3>
-				<p>
-					Reproducing bugs is easier when you can just snapshot
-					your history and mail it to the developer.
-				</p>
-
-				<p>
-					These questions typically involve reasoning backwards from effect
-					to cause whereas debuggers walk you forward from cause to effect.
-					The result is that debugging consists mostly not of finding the
-					problem but manually walking backwards along the chain of causes
-					by setting up isolated test cases and repeatedly rerunning them
-					under the debugger.
-				</p>
-			</section>
-
-				<section>
-					<h3>Debug by querying</h3>
-					<p>
-						BOOM analytics deals with this by reflecting all data,
-						from error logs and persistent data to message queues
-						and profiling data, into relational tables that are
-						made available to overlog - the same distributed query
-						language that runs the rest of the system.
-						This means you can directly run queries over the causality graph
-					</p>
-				</section>
+		<section>
+			Takk for oppmerksomheten!
+		</section>
 
 			</div>
 
