Style style styyyle

--- a/programmering-suger/slides/index.html
+++ b/programmering-suger/slides/index.html
@@ -13,7 +13,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/default.css" id="theme">
+		<link rel="stylesheet" href="css/theme/sky.css" id="theme">
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -44,11 +44,11 @@
 
 	<body>
 
-		<div class="reveal">
+		<div class="reveal slide">
 
 			<div class="slides">
 				<section>
-					<h1>Programmering Suger</h1>
+					<h2>Programmering Suger</h2>
 					<p>@gronnbeck</p>
 					<aside class="notes">
 						<ul>
@@ -273,7 +273,7 @@ at FailTest.MainClass.Main (System.String[] args)
 				center: true,
 
 				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+				transition: 'linear', // default/cube/page/concave/zoom/linear/fade/none
 
 				// Parallax scrolling
 				// parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
