--- a/programmering-suger/slides/index.html
+++ b/programmering-suger/slides/index.html
@@ -67,8 +67,8 @@
 						En som...
 					</p>
 					<ul>
-						<li>løser problemer</li>
-						<li>skaper noe</li>
+						<li class="fragment" data-fragment-index="1">løser problemer</li>
+						<li class="fragment" data-fragment-index="2">skaper noe</li>
 					</ul>
 				</section>
 
@@ -96,7 +96,7 @@
 				</section>
 
 				<section>
-					<h2>Pakke håndtering</h2>
+					<h2>Pakkehåndtering</h2>
 					<img class="fragment" data-fragment-index="1" src="img/pakker.gif" alt="" />
 				</section>
 
