Updated slides for ifi a bit

--- a/programmering-suger-ifi/slides/index.html
+++ b/programmering-suger-ifi/slides/index.html
@@ -145,14 +145,24 @@ double standard_dev( Iterator begin , Iterator end ) {
 			</section>
 
 			<section>
-			 <h4>double val = 0.3;</h4>
-			DENNE MÅ OPPDATERES DU TENKE IGJENNOM
+			 <h4>double val = 2.3;</h4>
 			</section>
 
 			<section>
-				<h4>Tidssoner</h4>
+				<h4>2.299999999999999
+					82236431605997495353221893310546875;</h4>
+			</section>
 
-			DENNE MÅ OPPDATERES	OG SKAL RANTE LITT OM DAYLIGHT SAVINGSTIME OG TIDSSONER
+			<section>
+				<h4>Dato og DateTime</h4>
+			</section>
+
+			<section>
+				<h5>UTC, CST, GMT, CST, CST</h5>
+			</section>
+
+			<section>
+				<h5>3 CST?</h5>
 			</section>
 
 			<section>
@@ -202,6 +212,11 @@ at FailTest.MainClass.Main (System.String[] args)
 		</section>
 
 		<section>
+			<p><strong>ArithmeticException</strong></p>
+			<p class="fragment" data-fragment-index="1">DivideByZeroException</p>
+		</section>
+
+		<section>
 			<p>'cannot call method undefined of undefined'</p>
 		</section>
 
@@ -211,10 +226,6 @@ at FailTest.MainClass.Main (System.String[] args)
 
 		<section>
 			<p>'cannot call method undefined of undefined'</p>
-		</section>
-
-		<section>
-			<h3>ArithmeticException</h3>
 		</section>
 
 		<section>
@@ -229,11 +240,6 @@ at FailTest.MainClass.Main (System.String[] args)
 
 		<section>
 			<img src="img/500-http-status-cat.jpg">
-		</section>
-
-		<section>
-			<h2>State of the Art</h2>
-			<p>All the logs!</p>
 		</section>
 
 		<section>
