Added link to this slide set

--- a/programmering-suger-ifi/slides/index.html
+++ b/programmering-suger-ifi/slides/index.html
@@ -50,6 +50,7 @@
 				<section>
 					<h2>Programmering Suger</h2>
 					<p>@gronnbeck</p>
+					<a href="bit.ly/prosuifi">bit.ly/prosuifi</a>
 					<aside class="notes">
 						<ul>
 							<li>Om meg</li>
