--- a/introduksjon-distsys/index.html
+++ b/introduksjon-distsys/index.html
@@ -73,6 +73,17 @@
 
     ---
 
+    # Problems
+
+    Feil:
+    * Nettverks
+    * Node
+    * Race-conditions
+    * Synkronisering / konsistens
+
+
+    ---
+
     # CAP
 
     ---
