--- a/introduksjon-distsys/index.html
+++ b/introduksjon-distsys/index.html
@@ -18,9 +18,26 @@
     ???
 
     * En introduksjon til distribuerte systemer
-    * stort felt, så rekker nok ikke å prate om alt
-    * jeg er ingen ekspert, men veldig interessert
-    * for de som ikke kjenner meg
+    * Dette var det jeg foreslå, og som vanlig har jeg tatt meg frihet til å
+    endre litt på det jeg egentlig skal snakke.
+    * Men denne gangen gjorde jeg kun en liten endring
+
+    ---
+
+    class: front-page
+
+    # En intro til mikrotjeneste arkitektur
+
+    ## Så hva er greia med mikrotjenester?
+
+    Ken Grønnbeck (@gronnbeck)
+
+    04.09.15
+
+    ???
+
+    * YEAH! Hipstertjenester. Eller Mikrotjenester da.
+    * Så HVA er greia med mikrotjenester? Og hvorfor bryr vi oss i dag?
 
     ---
 
@@ -61,10 +78,6 @@
 
     ---
 
-    # CAP
-
-    ---
-
     # Vellykkene distribuerte systemer
 
     * Distribuerte NoSQL databaser
@@ -72,7 +85,15 @@
 
     ???
 
-    *
+    * Dette er eksempler på vellykkede distribuerte systemer vi hører om i
+    det daglige.
+    * Så hva skiller disse fra systemer vi bygger i dag
+
+    ---
+
+    # CAP
+
+    ![CAP](img/cap1.png)
 
     ---
 
