Added number of requests to dashboard

--- a/high-performance-api-on-kubernetes/01-the-tools/dashboard/index.html
+++ b/high-performance-api-on-kubernetes/01-the-tools/dashboard/index.html
@@ -10,8 +10,11 @@
   <body>
     <h1>Hello world</h1>
 
-
+    <h2>Response times</h2>
     <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+
+    <h2>Requests per second</h2>
+    <div id="request-container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 
     <script src="js/index.js"></script>
   </body>
