--- a/high-performance-api-on-kubernetes/01-the-tools/dashboard/index.html
+++ b/high-performance-api-on-kubernetes/01-the-tools/dashboard/index.html
@@ -6,15 +6,33 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/superagent/3.5.2/superagent.js"></script>
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="responses">
+      <div class="chartcontainer chartcontainer--responseTimes">
+        <div id="container" style="height: 300px; margin: 0 auto"></div>
+      </div>
+      <div class="chartcontainer">
+        <div id="status-chart" style="min-width: 150px; height: 300px; margin: 0 auto"></div>
+      </div>
+    </div>
+    <div class="responses">
+      <div class="chartcontainer">
+        <ul>
+          <li>Response time 99th: <span id="response-time-99-number">FETCHING</span></li>
+          <li>Response time mean: <span id="response-time-mean-number">FETCHING</span></li>
+          <li>Requests per second: <span id="request-per-sec-number">FETCHING</span></li>
+        </ul>
 
-    <h2>Response times</h2>
-    <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 
-    <h2>Requests per second</h2>
-    <div id="request-container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+      </div>
+      <div class="chartcontainer">
+        <div id="request-container" style="min-width: 310px; height: 300px; margin: 0 auto"></div>
+      </div>
+
+    </div>
+
 
     <script src="js/index.js"></script>
   </body>
