style performance dashboard better

--- a/high-performance-api-on-kubernetes/01-the-tools/dashboard/index.html
+++ b/high-performance-api-on-kubernetes/01-the-tools/dashboard/index.html
@@ -18,18 +18,18 @@
       </div>
     </div>
     <div class="responses">
+      <div class="chartcontainer chartcontainer--requests">
+        <div id="request-container" style="min-width: 310px; height: 300px; margin: 0 auto"></div>
+      </div>
+
       <div class="chartcontainer">
         <ul>
           <li>Response time 99th: <span id="response-time-99-number">FETCHING</span></li>
           <li>Response time mean: <span id="response-time-mean-number">FETCHING</span></li>
           <li>Requests per second: <span id="request-per-sec-number">FETCHING</span></li>
         </ul>
-
-
       </div>
-      <div class="chartcontainer">
-        <div id="request-container" style="min-width: 310px; height: 300px; margin: 0 auto"></div>
-      </div>
+
 
     </div>
 
